src/objects/Case_Mapping_Settings__mdt.object
<CustomObject>
    <description>This custom metadata object has been created part of PPN-41295. It holds the Case status value and the mapping text and it will be displayed under the NPI search results display page</description>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <label>Actual Value</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_value__c</fullName>
        <label>Mapping value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Case Mapping Settings</label>
    <pluralLabel>Case Mapping Settings</pluralLabel>
</CustomObject>